--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,8 @@
     <color name="calendar_unfocused_date">#808080</color>
     <color name="calendar_selected_week">#800080</color>
     <color name="calendar_selected_day_bar">#008080</color>
+    <color name="signin_white">#FFFEF4</color>
+
 
     <color name="calendar_background">#FFFFFF</color>
     <color name="calendar_weekday_text">#0000FF</color>
