--- a/app/src/main/res/layout/fragment_user_settings.xml
+++ b/app/src/main/res/layout/fragment_user_settings.xml
@@ -6,92 +6,101 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <EditText
-        android:id="@+id/newName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Enter new name"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/nameLabel"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="20dp"
-         />
-
-    <!-- text says Username: -->
-    <TextView
-        android:id="@+id/usernameLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Username:"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/newName"
-        android:layout_marginTop="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="20dp"
-         />
-
-    <!-- display user's username -->
     <TextView
         android:id="@+id/usernameDisplay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="TextView"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/usernameLabel"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/usernameLabel" />
-
+        app:layout_constraintBaseline_toBaselineOf="@+id/usernameLabel"
+        app:layout_constraintStart_toEndOf="@id/usernameLabel" />
 
     <EditText
-        android:id="@+id/username"
-        android:inputType="text"
-        android:hint="Enter new username"
-        app:layout_constraintTop_toBottomOf="@+id/usernameLabel"
+        android:id="@+id/newName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:hint="Enter new name"
+        android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="20dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />
 
-    <!-- edit icon next to username -->
-
-
-    <!-- text that says Name: -->
-    <Button
-        android:id="@+id/submit_user_settings"
+    <TextView
+        android:id="@+id/usernameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="36dp"
-        android:text="Save"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="56dp"
+        android:text="Username:"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintTop_toBottomOf="@+id/newName" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
+        app:layout_constraintStart_toEndOf="@+id/nameLabel" />
 
     <TextView
         android:id="@+id/nameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="164dp"
         android:text="Name:"
         android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="100dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="20dp"
-         />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- displayed user's name -->
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="0dp"
+    <Button
+        android:id="@+id/submit_user_settings"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/nameLabel"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
-        android:textSize="18sp"
-        />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="28dp"
+        android:text="Save"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username" />
 
-    <!-- edit icon next to name -->
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:hint="Enter new username"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/profilePicture"
+        android:scaleType="centerCrop"
+        app:shapeAppearanceOverlay="@style/CircleImageView"
+        android:layout_width="81dp"
+        android:layout_height="87dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="45dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_profile_picture" />
+
+    <Button
+        android:id="@+id/uploadpfp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="68dp"
+        android:text="Upload Image"
+        app:layout_constraintStart_toEndOf="@+id/profilePicture"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
