--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -21,4 +21,8 @@
     <style name="CustomCalendarView" parent="android:Widget.CalendarView">
         <item name="android:textColorPrimary">@color/teal_200</item>
     </style>
+    <style name="CircleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
