--- a/app/src/main/res/layout/calendar_day_title.xml
+++ b/app/src/main/res/layout/calendar_day_title.xml
@@ -2,5 +2,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_weight="1"
+    android:textSize="20dp"
     android:gravity="center"
-    android:textColor="@color/wintergreen" />
+    android:textColor="@color/wintergreen"
+    android:text="aaaaa"/>
