--- a/app/src/main/res/layout/fragment_user_settings.xml
+++ b/app/src/main/res/layout/fragment_user_settings.xml
@@ -84,7 +84,7 @@
         android:textColor="#fff1f2"
         app:layout_constraintEnd_toEndOf="@id/editProfileText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/currentPw"
+        app:layout_constraintTop_toBottomOf="@id/textViewConfetti"
          />
 
     <EditText
@@ -173,6 +173,30 @@
         app:layout_constraintStart_toEndOf="@id/currentPw"
         android:layout_marginStart="10dp"
         app:layout_constraintTop_toBottomOf="@+id/resetpwText"
+        />
+
+    <TextView
+        android:id="@+id/textViewConfetti"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="  Confetti Toggle"
+        android:textColor="@color/pink_900"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/currentPw" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchConfetti"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/pink_900"
+        app:layout_constraintBaseline_toBaselineOf="@id/textViewConfetti"
+        app:layout_constraintStart_toEndOf="@id/textViewConfetti"
+        android:paddingStart="4dp"
+        android:checked="true"
         />
 
 
