--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,7 +28,7 @@
             android:title="@string/menu_tasks" />
         <item
             android:id="@+id/nav_notes"
-            android:icon="@drawable/ic_menu_tasks"
+            android:icon="@drawable/ic_menu_notes"
             android:title= "@string/menu_notes" />
         <item
             android:id="@+id/user_settings"
